feat(study-group): StudyGroup 신청 기능 구현